# ml-intern

./: README.md  iniciar-ml-intern.bat  pyproject.toml
agent/: config.py  main.py
agent/context_manager/: manager.py
agent/core/: agent_loop.py  session.py  tools.py
agent/prompts/: system_prompt.yaml  system_prompt_v2.yaml  system_prompt_v3.yaml
agent/tools/: jobs_tool.py  research_tool.py  sandbox_client.py  sandbox_tool.py
autoresearch/: README.md
autoresearch/slurm/: guided_prompt.txt  run.sbatch
backend/: models.py  session_manager.py
backend/routes/: agent.py
configs/: main_agent_config.json
frontend/: package-lock.json
frontend/.next/: trace  trace-build
frontend/src/components/: SessionChat.tsx
frontend/src/components/Chat/: ActivityStatusBar.tsx  ApprovalFlow.tsx  MessageBubble.tsx  ToolCallGroup.tsx
frontend/src/components/CodePanel/: CodePanel.tsx
frontend/src/components/Layout/: AppLayout.tsx
frontend/src/components/SessionSidebar/: SessionSidebar.tsx
frontend/src/hooks/: useAgentChat.ts  useAgentWebSocket.ts
frontend/src/lib/: sse-chat-transport.ts
frontend/src/store/: agentStore.ts
frontend/src/types/: agent.ts
posttrain-bench/: Dockerfile  solve.sh
posttrain-bench/slurm/: submit.sbatch
