[project]
name = "hf-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0",
    "requests>=2.32.5",
    "pydantic>=2.12.3",
    "litellm>=1.0.0",
    "tenacity>=8.0.0",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "datasets>=4.3.0",
    "huggingface-hub>=1.0.1",
    "mcp>=1.21.0",
]
